--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple javascript library to create interactive user tutorials and product tours.\r The library has a dependency on rjxs, but rather than that it can be used on any website or with any js framework.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/rowe-stamy/stamy-product-tour/issues"
   },
-  "homepage": "https://github.com/rowe-stamy/stamy-product-tour#readme"
+  "homepage": "https://github.com/rowe-stamy/stamy-product-tour#readme",
+  "devDependencies": {
+    "typescript": "^4.6.4"
+  }
 }
