--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "test": "jest",
     "build": "tsc",
+    "format": "",
     "prepare": "yarn run build",
-    "prepublishOnly": "yarn test"
+    "prepublishOnly": "yarn test",
+    "preversion": "yarn eslint -c .eslintrc.json"
   },
   "repository": {
     "type": "git",
@@ -26,9 +28,13 @@
   "devDependencies": {
     "@types/jest": "^27.4.1",
     "@types/jsdom": "^16.2.14",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
     "eslint": "^8.14.0",
+    "eslint-config-prettier": "^8.5.0",
     "jest": "27.2.3",
     "jsdom": "^19.0.0",
+    "prettier": "^2.6.2",
     "ts-jest": "27.0.5",
     "typescript": "^4.6.4"
   },
